PP‐016_ピッキングリスト作成

--- a/pp-s4apps01/zpickinglist/webapp/css/style.css
+++ b/pp-s4apps01/zpickinglist/webapp/css/style.css
@@ -1,1 +1,8 @@
 /* Enter your custom styles here */
+span[data-background="green"] {
+    background-color: #c9fcd5 !Important;
+}
+
+span[data-background="red"] {
+    background-color: #f56d6f !Important;
+}
