--- a/sd-s4apps01/creditmantablen/webapp/view/Main.view.xml
+++ b/sd-s4apps01/creditmantablen/webapp/view/Main.view.xml
@@ -1,7 +1,73 @@
-<mvc:View controllerName="sd.creditmantablen.controller.Main"
-    xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
-    <Page id="page" title="{i18n>title}">
-        <content />
-    </Page>
-</mvc:View>
+<mvc:View controllerName="sd.creditmantablen.controller.Main" displayBlock="true"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
+    xmlns="sap.m"
+    xmlns:f="sap.f"
+    xmlns:smartFilterBar="sap.ui.comp.smartfilterbar"
+    xmlns:sv="sap.ui.comp.smartvariants">
+
+    <f:DynamicPage headerExpanded="true">
+        <f:title>
+            <f:DynamicPageTitle>
+                <f:heading>
+                    <sv:SmartVariantManagement id="__SVM01" persistencyKey="creditmantable" showShare="true" showExecuteOnSelection="true" entitySet=""/>
+                </f:heading>
+            </f:DynamicPageTitle>
+        </f:title>
+        <f:header>
+            <f:DynamicPageHeader pinnable="true">
+
+                <f:content>
+                    <FlexBox fitContainer="true">
+        
+                        <smartFilterBar:SmartFilterBar id="idSmartFilterBar1" entitySet="CREDITMANTABLE" useToolbar="false" smartVariant="__SVM01" persistencyKey="creditmantable" visible="true" search="onSearch">
+                            <smartFilterBar:controlConfiguration>
+                                <!-- <smartFilterBar:ControlConfiguration index='10' key="SalesOrganization" mandatory="mandatory" filterType="single" controlType="dropDownList" displayBehaviour="descriptionAndId" visibleInAdvancedArea="true" label="{i18n>SalesOrganization}"/> -->
+                                <smartFilterBar:ControlConfiguration index='10' key="SalesOrganization" filterType="single" controlType="dropDownList" displayBehaviour="descriptionAndId" visibleInAdvancedArea="true" label="{i18n>SalesOrganization}"/>
+                                <smartFilterBar:ControlConfiguration index='20' key="Customer" visibleInAdvancedArea="true" label="{i18n>Customer}"/>
+                                <smartFilterBar:ControlConfiguration index='30' key="zyear" label="{i18n>zyear}" visibleInAdvancedArea="true">
+                                    <smartFilterBar:customControl>
+                                        <DatePicker valueFormat="yyyy" displayFormat="yyyy" value="{
+                                            'path':'local>/dateValue',
+                                            'type':'sap.ui.model.type.Date',
+                                            'formatOptions': {
+                                                'pattern': 'yyyy'
+                                            }
+                                        }"/>
+                                    </smartFilterBar:customControl>
+                                </smartFilterBar:ControlConfiguration>
+
+                                <!-- visible -->
+                                <smartFilterBar:ControlConfiguration index='999' key="Customer"/>
+                                <!-- <smartFilterBar:ControlConfiguration index='999' key="MaterialName" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="StorageLocationToName" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="TotalRequiredQuantity" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="TotalShortFallQuantity" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="StorageLocationToStock" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="M_CARD_Quantity" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="BaseUnit" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="TotalTransferQuantity" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="StorageLocationFromName" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="StorageLocationFromStock" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="GR_SlipsQuantity" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="M_CARD" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="LaboratoryOrDesignOfficeName" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="DetailsJson" visible="false"/> -->
+                            </smartFilterBar:controlConfiguration>
+                        </smartFilterBar:SmartFilterBar>
+                   
+                    </FlexBox>
+                </f:content>
+            </f:DynamicPageHeader>
+        </f:header>
+
+        <f:content>
+            <FlexBox fitContainer="true">
+                <core:Fragment fragmentName="sd.creditmantablen.fragments.CreditmanList" type="XML"/>
+            </FlexBox>
+        </f:content>
+
+
+
+    </f:DynamicPage>
+</mvc:View> 
