MM-004 購買単価差異レポート

--- a/mm-s4apps01/zpurchasepricevariance/webapp/view/App.view.xml
+++ b/mm-s4apps01/zpurchasepricevariance/webapp/view/App.view.xml
@@ -1,7 +1,5 @@
 <mvc:View controllerName="mm.zpurchasepricevariance.controller.App"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m">
-    <Page id="page" title="{i18n>title}">
-        <content />
-    </Page>
+    <App id="app" />
 </mvc:View>
